<resources>
    <string name="app_name">HotMovie</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_like">Like</string>
    <string name="no_available_network">no available network</string>

    <string name="acty_detail">Movie detail</string>

    <string name="dialog_query_movie">Loading movie infos</string>

    <string name="unit_minute">minute</string>
    <string name="no_data">the data you want does not exist,please refresh</string>
    <string name="cannot_connect_server">server cannot connect now</string>
    <string name="loading_comments">loading comments</string>

    <string name="sort_pref_changed" translatable="false">sort pref changed</string>
    <string name="overview">overview</string>
    <string name="comments">comments</string>
    <string name="no">no</string>

    <string name="pref_sort_label">Movie Sort By</string>
    <string name="pref_sort_key" translatable="false">movie rate</string>
    <string name="pref_sort_value_popular" translatable="false">popular</string>
    <string name="pref_sort_value_toprated" translatable="false">top_rated</string>
    <string name="pref_sort_value_favourite" translatable="false">favourite</string>

    <string name="movie_key" translatable="false">movie</string>
    <string name="movie_id_key" translatable="false">movie_id</string>
    <string name="insert_id_key" translatable="false">insert_id</string>
    <string name="screen_width" translatable="false">w342</string>
    <string name="is_first" translatable="false">is_first</string>
    <string name="page_num" translatable="false">page_num</string>

    <string name="hour">hour</string>
    <string name="pref_sync_rate_label">Synchronize Rate</string>
    <string name="pref_sync_rate_key" translatable="false">sync_rate</string>
    <string name="pref_last_sync_time" translatable="false">last_sync_time</string>
    <string name="pref_last_hot_movie_id" translatable="false">last_hot_movie_id</string>

    <string name="pref_movie_rank_notification_switch_label">Movie Rank Notification Switcher</string>
    <string name="pref_movie_rank_notification_switch_key" translatable="false">movie rank notification switcher</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">hotmovie.example.com</string>
    <string name="content_authority">com.example.xyl.hotmovie</string>

    <string-array name="pref_sort_arrays">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Favourite</item>
    </string-array>

    <string-array name="pref_sort_value_arrays">
        <item>popular</item>
        <item>top_rated</item>
        <item>favourite</item>
    </string-array>

    <string-array name="pref_sync_rate_arrays">
        <item>3h</item>
        <item>6h</item>
        <item>12h</item>
        <item>24h</item>
    </string-array>

    <string-array name="pref_sync_rate_value_arrays">
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <string name="pref_lang_label">Language</string>
    <string name="pref_lang_key" translatable="false">language</string>
    <string name="pref_lang_value_default" translatable="false">zh</string>

</resources>
