<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:id="@+id/pref_sort"
        android:title="@string/pref_sort_label"
        android:key="@string/pref_sort_key"
        android:defaultValue="@string/pref_sort_value_popular"
        android:entries="@array/pref_sort_arrays"
        android:entryValues="@array/pref_sort_value_arrays"
        android:dialogTitle="@string/pref_sort_label"
        />
    <ListPreference
        android:id="@+id/pref_sync_rate"
        android:title="@string/pref_sync_rate_label"
        android:key="@string/pref_sync_rate_key"
        android:defaultValue="24"
        android:entries="@array/pref_sync_rate_arrays"
        android:entryValues="@array/pref_sync_rate_value_arrays"
        android:dialogTitle="@string/pref_sync_rate_label"
        />
    <SwitchPreference
        android:id="@+id/pref_rank_notify"
        android:title="@string/pref_movie_rank_notification_switch_label"
        android:key="@string/pref_movie_rank_notification_switch_key"
        android:defaultValue="false"
        android:switchTextOn="@string/open"
        android:switchTextOff="@string/close"
        />
</PreferenceScreen>